--- a/compilador/src/main/resources/org/fipp/compilador/hello-view.fxml
+++ b/compilador/src/main/resources/org/fipp/compilador/hello-view.fxml
@@ -1,47 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
-<?import javafx.scene.control.Button?>
-<BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fipp.compilador.HelloController">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fipp.compilador.HelloController">
+
     <center>
         <HBox spacing="5" style="-fx-background-color: lightgray;">
             <ScrollPane fx:id="spNumeroLinhas" fitToHeight="true" hbarPolicy="NEVER" prefWidth="50" style="-fx-background-color: transparent;">
-                <TextArea fx:id="taNumeroLinhas" editable="false" style="-fx-background-color: #FFFF00;" wrapText="true">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </TextArea>
+                <TextArea fx:id="taNumeroLinhas" editable="false" style="-fx-background-color: #FFFF00;" wrapText="true" />
             </ScrollPane>
+
             <ScrollPane fitToHeight="true" style="-fx-background-color: transparent;">
+                <!-- TextArea para entrada -->
                 <TextArea fx:id="taCodigo" promptText="Insira o código aqui..." wrapText="true">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </TextArea>
             </ScrollPane>
+
+            <ScrollPane fitToHeight="true" prefWidth="384.0" style="-fx-background-color: transparent;">
+                <!-- TextFlow para saída formatada -->
+                <TextFlow fx:id="tfCodigo" minWidth="382.0" prefWidth="382.0" style="-fx-background-color: white; -fx-padding: 5;" />
+            </ScrollPane>
         </HBox>
     </center>
+
     <bottom>
-        <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: gray;" BorderPane.alignment="CENTER">
-            <children>
-                <Label text="Área de erros" />
-                <TextArea fx:id="taTokens" editable="false" promptText="Tokens identificados..." wrapText="true"/>
-                <TextArea fx:id="taErros" editable="false" promptText="Erros léxicos..." wrapText="true"/>
-            </children>
+        <HBox spacing="10" style="-fx-background-color: gray;">
+            <Label text="Área de erros" />
+            <TextArea fx:id="taTokens" editable="false" promptText="Tokens identificados..." wrapText="true" />
+            <TextArea fx:id="taErros" editable="false" promptText="Erros léxicos..." wrapText="true" />
         </HBox>
     </bottom>
+
     <top>
-        <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: gray;" BorderPane.alignment="CENTER">
-            <children>
-                <Label text="Menu Botões" />
-                <Button text="Analisar Código" onAction="#analisarCodigo"/>
-            </children>
+        <HBox spacing="10" style="-fx-background-color: gray; padding: 10;">
+            <Label text="Menu Botões" />
+            <Button onAction="#analisarCodigo" text="Analisar Código" />
         </HBox>
     </top>
 </BorderPane>
