--- a/compilador/src/main/resources/org/fipp/compilador/hello-view.fxml
+++ b/compilador/src/main/resources/org/fipp/compilador/hello-view.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fipp.compilador.HelloController">
+<BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fipp.compilador.HelloController">
 
     <center>
         <HBox spacing="5" style="-fx-background-color: lightgray;">
@@ -19,11 +19,7 @@
 
             <ScrollPane fitToHeight="true" style="-fx-background-color: transparent;">
                 <!-- TextArea para entrada -->
-                <TextArea fx:id="taCodigo" promptText="Insira o código aqui..." wrapText="true">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </TextArea>
+                <TextArea fx:id="taCodigo" promptText="Insira o código aqui..." wrapText="true" />
             </ScrollPane>
 
             <ScrollPane fitToHeight="true" prefWidth="384.0" style="-fx-background-color: transparent;">
@@ -35,7 +31,6 @@
 
     <bottom>
         <HBox spacing="10" style="-fx-background-color: gray;">
-            <Label text="Área de erros" />
             <TextArea fx:id="taTokens" editable="false" promptText="Tokens identificados..." wrapText="true" />
             <TextArea fx:id="taErros" editable="false" promptText="Erros léxicos..." wrapText="true" />
         </HBox>
@@ -43,8 +38,24 @@
 
     <top>
         <HBox spacing="10" style="-fx-background-color: gray; padding: 10;">
-            <Label text="Menu Botões" />
-            <Button onAction="#analisarCodigo" text="Analisar Código" />
+            <Button onAction="#analisarCodigo" text="">
+                <graphic>
+                    <ImageView fitHeight="20.0" fitWidth="20.0">
+                        <image>
+                            <Image url="@../../../imgs/play.png" />
+                        </image>
+                    </ImageView>
+                </graphic>
+            </Button>
+         <Button mnemonicParsing="false" onAction="#limparTudo">
+            <graphic>
+               <ImageView fitHeight="26.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../../imgs/clear.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+         </Button>
         </HBox>
     </top>
 </BorderPane>
