--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   height: 600px; /* Altura fixa para o editor */
 }
 
+.semantico {
+  color: #ff4500; /* Laranja para erros semânticos */
+}
+
 .line-numbers {
   width: 40px;
   background: #bbbbbb;
